--- a/.github/workflows/first-example.yml
+++ b/.github/workflows/first-example.yml
@@ -4,6 +4,8 @@ jobs:
     first_job:
         runs-on: ubuntu-latest
         steps:
+        - name: checkout repo
+          uses: uses: actions/checkout@v6
         - name: welcome message
           run: echo "My first GitHub Actions job"
         - name: list files
